# project-7

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md
.project-factory/: manifest.json
database/: init.sql
docs/: ARCHITECTURE.md  OPERATIONS.md
src/: main.cpp
